--- a/devbranch.html
+++ b/devbranch.html
@@ -234,7 +234,7 @@ const exerciseImages={
   "DB Arnold Press":"https://upload.wikimedia.org/wikipedia/commons/8/8a/Arnold_press_1.svg"
 };
   
-  return exerciseImages[name] || `https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=56&h=56&fit=crop&crop=center`;
+  return exerciseImages[name] || ``;
 }
 
 function renderTable(list){
